gerencia-2/notebook-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: notebook
spec:
  selector:
    app: notebook
  ports:
    - name: http
      port: 80
      targetPort: 8888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notebook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: notebook
  template:
    metadata:
      labels:
        app: notebook
    spec:
      containers:
      - name: notebook
        image: rdrigomachado/notebook:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8888
